--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   weather: ^3.1.1
   intl: ^0.19.0
+  provider: ^6.1.2
+  flutter_typeahead: ^5.2.0
+  flutter_keyboard_visibility: 6.0.0
 
 dev_dependencies:
   flutter_test:
